# clickup-exporter

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  appspec.yml  buildspec.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
apps/: gunicorn.conf.py
apps/core/: celery.py  schema.py  tasks.py  urls.py
apps/core/middlewares/: healthcheck.py
apps/core/settings/: default.py  dev.py
apps/export/: cache.py  clickup_data_fetcher.py  config.py  exceptions.py  tasks.py  urls.py  utils.py  views.py
nginx/templates/: default.conf.template
scripts/: after_install.sh  run_command  start
scripts/celery/beat/: start
scripts/celery/flower/: start
scripts/celery/worker/: start
